tests/ui/type-alias-impl-trait/bounds-are-checked3.stderr
error[E0277]: `T` doesn't implement `std::fmt::Display`
  --> $DIR/bounds-are-checked3.rs:9:35
   |
LL | type Foo<T: Debug> = (impl Debug, Struct<T>);
   |                                   ^^^^^^^^^ the trait `std::fmt::Display` is not implemented for `T`
   |
note: required by a bound in `Struct`
  --> $DIR/bounds-are-checked3.rs:5:18
   |
LL | struct Struct<V: Display>(Option<V>);
   |                  ^^^^^^^ required by this bound in `Struct`
help: consider further restricting type parameter `T` with trait `Display`
   |
LL | type Foo<T: Debug + std::fmt::Display> = (impl Debug, Struct<T>);
   |                   +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
